StudyBuddy entegrasyonu tamamlandı